*freshplayerplugin-0.3.9-r1
::gentoo		base ebuild
::prototype99	add missing use flag dependency