@@ -3,5 +3,6 @@ AUX 0.3.9-ioctl.patch 369 BLAKE2B 88dba5e3e0d49fc7f6f3c2b56a8e7888be48b88dc77c26
 AUX freshplayerplugin-0.3.9-ffmpeg-4.patch 3116 BLAKE2B 820c6ab058620406fce34260470b46c70bd970571a518ecdbd38e18ed170711e93bddd95d0bc95f2cada1b6b5cf4a74cfcf68cb23699ac32d886e43b0d9f3b77 SHA512 f7adae50de4cdca812ba1bad32ec10f9f97bf484c7e88b06be22e7677774093f17353f3e21ce2d26273cb076cee128a41311b1bf5b891031df27dc2f0684b272
 DIST freshplayerplugin-0.3.9.tar.gz 790261 BLAKE2B 88526c01e7a06c7b295e5a7652602eb661097f869b30c8fd0978a4e03adea9d1fa75d35e5e9c0751d786c04f0247fc292aa0c1857cf1fa575eb0b11499bec7fc SHA512 999d7c223dd493e43a0fa7874371c7b781fe5273b2661fc30f814832b4aafd23f297795b644f58553107ef962ca17ce58fb39a637d1ab7bdf470cd33e0b19cf8
 EBUILD freshplayerplugin-0.3.9-r1.ebuild 1787 BLAKE2B 61e306ae4c4c58b9db19d5ec22c4bba57c8d20713e6cf32c5094044dabfbba38c9db2208440991cf9cc6194aefeecf1334604235a853a493d844afc393821964 SHA512 f6bd577be820c9a9effa148d38297eeffced25bb2cba50c8124f2384967ba99ab5625c250708f79c4e21e7bc1fbf46d03dd1ee612eef5a026733794da7fe7b6f
-MISC ChangeLog 95 BLAKE2B 1be8ac2e607f113a2d7b47bf51a927fd4882198cdbab891b161b8557232f22847c642b44439ca91141715aee186934ee0928d27514a5a22019a44e36a7ca0c0d SHA512 2b7499ddaee520825890489bcf2f3a5b3e703884ce25b52bb4d9e525d238f7c9b52e7557fc447d068270ff073015100b0d082ee40d5f5461eb75ee3fdf2ad19a
+EBUILD freshplayerplugin-0.3.9-r2.ebuild 1762 BLAKE2B 6ecdf4a6bb202987e39aaebeb6a5ab8291871e8964da245fdf822dd23adaba118042016d7625ac9cf579a1acd7e557a8f34445e697f8a82037280d5521b3fea0 SHA512 867e6c41a0395a6037a35dbf2e650705507ee1fbb36b4d634dd8e0e77a734652bc12161f3e147b5487eb15823da94f5d1e7fca7b572ea93331971bcadce8d5aa
+MISC ChangeLog 157 BLAKE2B 7aaadddd235454ec4e370f7a27d1863d89dd260ef75508a86bdc2c5eb693faf825773b2b8c0c2f3aa3f68914f06090b149d17225b763d276fd5a97cc0fa1f760 SHA512 abae31bda6349c0ed454f829cce9da0839a2205caf3240b8070b33ad6e1935cebd238dada9e6c10a4d6bd7c4ffb3cf8d915e03c269ac8a0a85906e3b64314b1b
 MISC metadata.xml 334 BLAKE2B c8bfd0c2eb294bc31fbc66ecbbb5dd7af7f771f9ef1fb4e0aa312f25d3ab22e9ec418ccf87c67befc2a3e3fb78a171b6e5af8be33d41658afb7749d0479a5610 SHA512 f93a86a1356796f96584ea43cdab69b4058f731492ec4a52e6d7444946ada585f016f63afa2fd27c2019c1a9706d8e83ae6b511b5e8a8f6c003b6a1099d6e473
