@@ -1,3 +1,5 @@
+*freshplayerplugin-0.3.9-r2
+::prototype99	fix jack dependency
 *freshplayerplugin-0.3.9-r1
 ::gentoo		base ebuild
 ::prototype99	add missing use flag dependency
